CRUD ITEM COMPLETO
